--- a/public/css/bootstrap-table.css
+++ b/public/css/bootstrap-table.css
@@ -207,8 +207,8 @@
 
 /* support bootstrap 3 */
 .table thead>tr>th {
-    padding: 0;
-    margin: 0;
+    padding: 9px;
+    margin: 9px;
 }
 
 .pull-right .dropdown-menu {
