--- a/templates/dates.html
+++ b/templates/dates.html
@@ -96,7 +96,7 @@
 		<div class="col-lg-12">
 			<div class="panel panel-default">
 				<div  style="overflow: scroll;">
-				    <div style="max-width: 900px;height: 500px;">
+				    <div style="max-width: 600px;max-height: 300px;">
 				       <canvas id="line-chart" ></canvas>
 					</div>
 					
